fix:优化工程结构