@@ -15,7 +15,8 @@ import com.mdframe.forge.plugin.system.mapper.SysResourceMapper;
 import com.mdframe.forge.plugin.system.mapper.SysRoleResourceMapper;
 import com.mdframe.forge.plugin.system.mapper.SysUserRoleMapper;
 import com.mdframe.forge.plugin.system.service.ISysResourceService;
-import com.mdframe.forge.plugin.system.vo.UserResourceTreeVO;
+import com.mdframe.forge.starter.auth.domain.UserResourceTreeVO;
+import com.mdframe.forge.starter.auth.service.IMenuService;
 import com.mdframe.forge.starter.core.session.LoginUser;
 import com.mdframe.forge.starter.core.session.SessionHelper;
 import lombok.RequiredArgsConstructor;
@@ -32,7 +33,7 @@ import java.util.stream.Collectors;
  */
 @Service
 @RequiredArgsConstructor
-public class SysResourceServiceImpl extends ServiceImpl<SysResourceMapper, SysResource> implements ISysResourceService {
+public class SysResourceServiceImpl extends ServiceImpl<SysResourceMapper, SysResource> implements ISysResourceService, IMenuService {
 
     private final SysResourceMapper resourceMapper;
     private final SysUserRoleMapper userRoleMapper;
@@ -47,64 +48,8 @@ public class SysResourceServiceImpl extends ServiceImpl<SysResourceMapper, SysRe
 
     @Override
     public List<SysResource> selectResourceTree(SysResourceQuery query) {
-        // 如果不是管理员，只能查询自己拥有的资源树，防止权限溢出
-        LoginUser loginUser = SessionHelper.getLoginUser();
-        if (loginUser != null && !loginUser.isAdmin()) {
-            List<SysResource> userResources = getUserResources(loginUser);
-            // 如果有查询条件，进行过滤
-            if (StringUtils.isNotBlank(query.getResourceName())) {
-                userResources = userResources.stream()
-                        .filter(r -> r.getResourceName().contains(query.getResourceName()))
-                        .collect(Collectors.toList());
-            }
-            return buildResourceTree(userResources, 0L);
-        }
-
-        LambdaQueryWrapper<SysResource> wrapper = buildQueryWrapper(query);
-        List<SysResource> list = resourceMapper.selectList(wrapper);
-        
-        // 构建树形结构
-        return buildResourceTree(list, 0L);
-    }
-    
-    /**
-     * 构建资源树形结构
-     *
-     * @param list     资源列表
-     * @param parentId 父级ID
-     * @return 树形结构列表
-     */
-    private List<SysResource> buildResourceTree(List<SysResource> list, Long parentId) {
-        if (CollUtil.isEmpty(list)) {
-            return new ArrayList<>();
-        }
-
-        // 按照parentId分组
-        Map<Long, List<SysResource>> groupMap = list.stream()
-                .collect(Collectors.groupingBy(resource -> resource.getParentId() == null ? 0L : resource.getParentId()));
-
-        // 递归构建树形结构
-        return buildResourceTreeRecursive(groupMap, parentId);
-    }
-
-    /**
-     * 递归构建资源树形结构
-     */
-    private List<SysResource> buildResourceTreeRecursive(Map<Long, List<SysResource>> groupMap, Long parentId) {
-        List<SysResource> children = groupMap.get(parentId);
-        if (CollUtil.isEmpty(children)) {
-            return new ArrayList<>();
-        }
-
-        // 为每个节点递归设置子节点
-        children.forEach(node -> {
-            List<SysResource> subChildren = buildResourceTreeRecursive(groupMap, node.getId());
-            if (CollUtil.isNotEmpty(subChildren)) {
-                node.setChildren(subChildren);
-            }
-        });
-
-        return children;
+        List<SysResource> list = list(buildQueryWrapper(query));
+        return buildEntityTree(list, 0L);
     }
 
     @Override
@@ -133,64 +78,52 @@ public class SysResourceServiceImpl extends ServiceImpl<SysResourceMapper, SysRe
 
     @Override
     public List<UserResourceTreeVO> selectCurrentUserResourceTree() {
-        // 1. 获取当前登录用户信息
         LoginUser loginUser = SessionHelper.getLoginUser();
         if (loginUser == null) {
             throw new RuntimeException("用户未登录");
         }
 
-        // 2. 查询用户的所有资源（包含菜单和按钮）
         List<SysResource> userResources = getUserResources(loginUser);
-
-        // 3. 转换为VO并构建树形结构
         List<UserResourceTreeVO> voList = userResources.stream()
                 .map(this::convertToVO)
                 .collect(Collectors.toList());
 
-        // 4. 构建树形结构
-        return buildTree(voList, 0L);
+        return buildVOTree(voList, 0L);
     }
 
     @Override
     public List<UserResourceTreeVO> selectCurrentUserMenuTree() {
-        // 1. 获取当前登录用户信息
         LoginUser loginUser = SessionHelper.getLoginUser();
         if (loginUser == null) {
             throw new RuntimeException("用户未登录");
         }
 
-        // 2. 查询用户的菜单资源（仅包含目录和菜单，resourceType为1和2）
         List<SysResource> userResources = getUserResources(loginUser);
         List<SysResource> menuResources = userResources.stream()
                 .filter(resource -> resource.getResourceType() != null
                         && (resource.getResourceType() == 1 || resource.getResourceType() == 2))
-                .toList();
+                .collect(Collectors.toList());
 
-        // 3. 转换为VO并构建树形结构
         List<UserResourceTreeVO> voList = menuResources.stream()
                 .map(this::convertToVO)
                 .collect(Collectors.toList());
 
-        // 4. 构建树形结构
-        return buildTree(voList, 0L);
+        return buildVOTree(voList, 0L);
     }
 
     @Override
     public List<String> selectCurrentUserPermissions() {
-        // 1. 获取当前登录用户信息
         LoginUser loginUser = SessionHelper.getLoginUser();
         if (loginUser == null) {
             throw new RuntimeException("用户未登录");
         }
 
-        // 2. 超级管理员拥有所有权限
         if (loginUser.isAdmin()) {
             List<String> allPermissions = new ArrayList<>();
             allPermissions.add("*:*:*");
             return allPermissions;
         }
 
-        // 3. 查询用户的按钮资源（resourceType为3）
         List<SysResource> userResources = getUserResources(loginUser);
         return userResources.stream()
                 .filter(resource -> resource.getResourceType() != null && resource.getResourceType() == 3)
@@ -206,37 +139,33 @@ public class SysResourceServiceImpl extends ServiceImpl<SysResourceMapper, SysRe
         if (loginUser == null) {
             return new ArrayList<>();
         }
-        
-        // 超级管理员拥有所有资源ID
+
         if (loginUser.isAdmin()) {
             return resourceMapper.selectList(new LambdaQueryWrapper<SysResource>().select(SysResource::getId))
                     .stream().map(SysResource::getId).collect(Collectors.toList());
         }
-        
+
         return getUserResources(loginUser).stream()
                 .map(SysResource::getId)
                 .collect(Collectors.toList());
     }
 
-    /**
-     * 获取用户的资源列表
-     */
     private List<SysResource> getUserResources(LoginUser loginUser) {
-        // 1. 超级管理员拥有所有资源
+        String clientCode = loginUser.getUserClient() != null ? loginUser.getUserClient() : "pc";
+        
         if (loginUser.isAdmin()) {
             LambdaQueryWrapper<SysResource> wrapper = new LambdaQueryWrapper<>();
-            wrapper.orderByAsc(SysResource::getSort)
+            wrapper.eq(SysResource::getClientCode, clientCode)
+                    .orderByAsc(SysResource::getSort)
                     .orderByDesc(SysResource::getCreateTime);
             return resourceMapper.selectList(wrapper);
         }
 
-        // 2. 普通用户根据角色查询资源
         List<Long> roleIds = loginUser.getRoleIds();
         if (CollUtil.isEmpty(roleIds)) {
             return new ArrayList<>();
         }
 
-        // 3. 查询角色关联的资源ID列表
         LambdaQueryWrapper<SysRoleResource> roleResourceWrapper = new LambdaQueryWrapper<>();
         roleResourceWrapper.in(SysRoleResource::getRoleId, roleIds);
         List<SysRoleResource> roleResources = roleResourceMapper.selectList(roleResourceWrapper);
@@ -250,75 +179,33 @@ public class SysResourceServiceImpl extends ServiceImpl<SysResourceMapper, SysRe
                 .distinct()
                 .collect(Collectors.toList());
 
-        // 4. 查询资源详情
         if (CollUtil.isEmpty(resourceIds)) {
             return new ArrayList<>();
         }
 
         LambdaQueryWrapper<SysResource> resourceWrapper = new LambdaQueryWrapper<>();
         resourceWrapper.in(SysResource::getId, resourceIds)
+                .eq(SysResource::getClientCode, clientCode)
                 .orderByAsc(SysResource::getSort)
                 .orderByDesc(SysResource::getCreateTime);
         return resourceMapper.selectList(resourceWrapper);
     }
 
-    /**
-     * 将资源实体转换为VO
-     */
-    private UserResourceTreeVO convertToVO(SysResource resource) {
-        UserResourceTreeVO vo = new UserResourceTreeVO();
-        vo.setId(resource.getId());
-        vo.setParentId(resource.getParentId());
-        vo.setResourceName(resource.getResourceName());
-        vo.setResourceType(resource.getResourceType());
-        vo.setSort(resource.getSort());
-        vo.setPath(resource.getPath());
-        vo.setComponent(resource.getComponent());
-        vo.setIsExternal(resource.getIsExternal());
-        vo.setMenuStatus(resource.getMenuStatus());
-        vo.setVisible(resource.getVisible());
-        vo.setPerms(resource.getPerms());
-        vo.setIcon(resource.getIcon());
-        vo.setKeepAlive(resource.getKeepAlive());
-        vo.setAlwaysShow(resource.getAlwaysShow());
-        vo.setRedirect(resource.getRedirect());
-        vo.setApiMethod(resource.getApiMethod());
-        vo.setApiUrl(resource.getApiUrl());
-        return vo;
-    }
-
-    /**
-     * 构建树形结构
-     *
-     * @param list     资源列表
-     * @param parentId 父级ID
-     * @return 树形结构列表
-     */
-    private List<UserResourceTreeVO> buildTree(List<UserResourceTreeVO> list, Long parentId) {
+    private List<SysResource> buildEntityTree(List<SysResource> list, Long parentId) {
         if (CollUtil.isEmpty(list)) {
             return new ArrayList<>();
         }
 
-        // 按照parentId分组
-        Map<Long, List<UserResourceTreeVO>> groupMap = list.stream()
-                .collect(Collectors.groupingBy(vo -> vo.getParentId() == null ? 0L : vo.getParentId()));
+        Map<Long, List<SysResource>> groupMap = list.stream()
+                .collect(Collectors.groupingBy(SysResource::getParentId));
 
-        // 递归构建树形结构
-        return buildTreeRecursive(groupMap, parentId);
-    }
-
-    /**
-     * 递归构建树形结构
-     */
-    private List<UserResourceTreeVO> buildTreeRecursive(Map<Long, List<UserResourceTreeVO>> groupMap, Long parentId) {
-        List<UserResourceTreeVO> children = groupMap.get(parentId);
+        List<SysResource> children = groupMap.get(parentId);
         if (CollUtil.isEmpty(children)) {
             return new ArrayList<>();
         }
 
-        // 为每个节点递归设置子节点
         children.forEach(node -> {
-            List<UserResourceTreeVO> subChildren = buildTreeRecursive(groupMap, node.getId());
+            List<SysResource> subChildren = buildEntityTree(list, node.getId());
             if (CollUtil.isNotEmpty(subChildren)) {
                 node.setChildren(subChildren);
             }
@@ -327,9 +214,52 @@ public class SysResourceServiceImpl extends ServiceImpl<SysResourceMapper, SysRe
         return children;
     }
 
-    /**
-     * 构建查询条件
-     */
+    private List<UserResourceTreeVO> buildVOTree(List<UserResourceTreeVO> list, Long parentId) {
+        if (CollUtil.isEmpty(list)) {
+            return new ArrayList<>();
+        }
+
+        Map<Long, List<UserResourceTreeVO>> groupMap = list.stream()
+                .collect(Collectors.groupingBy(vo -> vo.getParentId() == null ? 0L : vo.getParentId()));
+
+        List<UserResourceTreeVO> children = groupMap.get(parentId);
+        if (CollUtil.isEmpty(children)) {
+            return new ArrayList<>();
+        }
+
+        children.forEach(node -> {
+            List<UserResourceTreeVO> subChildren = buildVOTree(list, node.getId());
+            if (CollUtil.isNotEmpty(subChildren)) {
+                node.setChildren(subChildren);
+            }
+        });
+
+        return children;
+    }
+
+    private UserResourceTreeVO convertToVO(SysResource resource) {
+        UserResourceTreeVO vo = new UserResourceTreeVO();
+        vo.setId(resource.getId());
+        vo.setParentId(resource.getParentId());
+        vo.setResourceName(resource.getResourceName());
+        vo.setResourceType(resource.getResourceType());
+        vo.setPath(resource.getPath());
+        vo.setComponent(resource.getComponent());
+        vo.setIsExternal(resource.getIsExternal());
+        vo.setIsPublic(resource.getIsPublic());
+        vo.setMenuStatus(resource.getMenuStatus());
+        vo.setVisible(resource.getVisible());
+        vo.setPerms(resource.getPerms());
+        vo.setIcon(resource.getIcon());
+        vo.setApiMethod(resource.getApiMethod());
+        vo.setKeepAlive(resource.getKeepAlive());
+        vo.setAlwaysShow(resource.getAlwaysShow());
+        vo.setRedirect(resource.getRedirect());
+        vo.setRemark(resource.getRemark());
+        vo.setSort(resource.getSort());
+        return vo;
+    }
+
     private LambdaQueryWrapper<SysResource> buildQueryWrapper(SysResourceQuery query) {
         LambdaQueryWrapper<SysResource> wrapper = new LambdaQueryWrapper<>();
         wrapper.eq(query.getTenantId() != null, SysResource::getTenantId, query.getTenantId())
@@ -337,6 +267,7 @@ public class SysResourceServiceImpl extends ServiceImpl<SysResourceMapper, SysRe
                 .eq(query.getParentId() != null, SysResource::getParentId, query.getParentId())
                 .eq(query.getResourceType() != null, SysResource::getResourceType, query.getResourceType())
                 .eq(query.getVisible() != null, SysResource::getVisible, query.getVisible())
+                .eq(StringUtils.isNotBlank(query.getClientCode()), SysResource::getClientCode, query.getClientCode())
                 .orderByAsc(SysResource::getSort)
                 .orderByDesc(SysResource::getCreateTime);
         return wrapper;
